# example-bazel-sveltekit

./: .bazelignore  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
