load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vite/package_json.bzl", vite_bin = "bin")
load("@npm//:@sveltejs/package/package_json.bzl", svelte_package_bin = "bin")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

vite_bin.vite_binary(
    name = "vite_binary",
    visibility = ["//visibility:public"],
)

svelte_package_bin.svelte_package_binary(
    name = "svelte_package",
    visibility = ["//visibility:public"],
)
